# treesitter-simple-cli

./: Cargo.toml  Makefile  README.md
.github/workflow/: release.yml
.github/workflows/: release.yml
example_output/: example.json  example.txt  example.xml
src/: main.rs
